syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc.smartoffices.heating";
option java_outer_classname = "SmartHeatingServiceImpl";
package SmartOffices;


service SmartHeating {
  // Simple RPC: A single request-response for updating settings.
  rpc UpdateSettings(HeatingRequest) returns (HeatingResponse);

  // Server-side streaming RPC: Client sends a request, server responds with a stream of updates.
  rpc MonitorTemperature(HeatingRequest) returns (stream HeatingResponse);
}

message HeatingRequest {
  double temperature = 1;
  double humidity = 2;
  double airPollution = 3; // PM2.5 level
}

message HeatingResponse {
  bool heatingStatus = 1; // True if heating is on, False if off
}


