syntax = "proto3";

service SmartLights {
  rpc TurnOn (LightRequest) returns (LightResponse) {}
  rpc TurnOff (LightRequest) returns (LightResponse) {}
  rpc ChangeColor (ColorRequest) returns (ColorResponse) {}
  // Add more RPCs for controlling lights
}

message LightRequest {
  int32 floor = 1;
  int32 room = 2;
  // Add any additional fields here
}

message LightResponse {
  string status_message = 1;
}

message ColorRequest {
  int32 floor = 1;
  int32 room = 2;
  string color = 3;
}

message ColorResponse {
  string status_message = 1;
}
