syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc.smartoffices";
option java_outer_classname = "SmartWindowServiceImpl";
package SmartOffices;



// Smart Window Service
service SmartWindowService {
  // Simple RPC to open the window
  rpc OpenWindow (OpenWindowRequest) returns (OpenWindowResponse) {}

  // Simple RPC to close the window
  rpc CloseWindow (CloseWindowRequest) returns (CloseWindowResponse) {}

  // Server-side streaming RPC to get the window status
  rpc GetWindowStatus (GetWindowStatusRequest) returns (stream GetWindowStatusResponse) {}

  // Client-side streaming RPC to set the window status
  rpc SetWindowStatus (stream SetWindowStatusRequest) returns (SetWindowStatusResponse) {}

  // Bidirectional streaming RPC to adjust the window tint
  rpc AdjustWindowTint (stream AdjustWindowTintRequest) returns (stream AdjustWindowTintResponse) {}
}

// OpenWindowRequest
message OpenWindowRequest {
  string area = 1;
}

// OpenWindowResponse
message OpenWindowResponse {
  bool success = 1;
}

// CloseWindowRequest
message CloseWindowRequest {
  string area = 1;
}

// CloseWindowResponse
message CloseWindowResponse {
  bool success = 1;
}

// GetWindowStatusRequest
message GetWindowStatusRequest {
  string area = 1;
}

// GetWindowStatusResponse
message GetWindowStatusResponse {
  bool is_open = 1;
  int32 tint = 2;
}

// SetWindowStatusRequest
message SetWindowStatusRequest {
  string area = 1;
  bool is_open = 2;
}

// SetWindowStatusResponse
message SetWindowStatusResponse {
  bool success = 1;
}

// AdjustWindowTintRequest
message AdjustWindowTintRequest {
  string area = 1;
  int32 tint = 2;
}

// AdjustWindowTintResponse
message AdjustWindowTintResponse {
  bool success = 1;
}
